--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -52,6 +52,7 @@
                 android:textColorHint="@color/secondary_text"
                 android:textColor="@color/secondary_text"
                 android:padding="10dp"
+                android:inputType="textPassword"
                 android:layout_marginTop="30dp"
                 android:hint="Password"/>
 
