--- a/app/src/main/res/layout/activity_add_note_page.xml
+++ b/app/src/main/res/layout/activity_add_note_page.xml
@@ -81,7 +81,7 @@
                             android:textSize="15dp"/>
 
                         <EditText
-                            android:id="@+id/subject"
+                            android:id="@+id/title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
@@ -109,6 +109,7 @@
                             android:textColor="@color/secondary_text"/>
 
                         <TextView
+                            android:id="@+id/btnAddPic"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@color/primary"
@@ -128,7 +129,7 @@
                     </LinearLayout>
 
                     <TextView
-                        android:id="@+id/btnAddAssignment"
+                        android:id="@+id/btnAddNote"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@drawable/main_button"
