--- a/app/src/main/res/layout/activity_assignment_page.xml
+++ b/app/src/main/res/layout/activity_assignment_page.xml
@@ -163,10 +163,23 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/border_card">
+                    android:orientation="vertical"
+                    android:background="@color/primary">
 
+                    <TextView
+                        android:id="@+id/emptyAssignment"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="No Assignments"
+                        android:gravity="center"
+                        android:textSize="25dp"
+                        android:textColor="@color/btn_l"
+                        android:textStyle="bold"/>
 
-
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/assignmentListView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
