--- a/app/src/main/res/layout/assignment_card.xml
+++ b/app/src/main/res/layout/assignment_card.xml
@@ -8,8 +8,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginTop="5dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="10dp"
@@ -58,7 +58,7 @@
                     android:textStyle="bold"
                     android:textSize="15dp"/>
 
-                <androidx.core.widget.ContentLoadingProgressBar
+                <com.google.android.material.progressindicator.LinearProgressIndicator
                     android:id="@+id/progressBar"
                     android:layout_width="match_parent"
                     android:layout_height="10dp"
