--- a/app/src/main/res/layout/activity_add_note_page.xml
+++ b/app/src/main/res/layout/activity_add_note_page.xml
@@ -57,6 +57,7 @@
                     android:background="@color/primary">
 
                     <TextView
+                        android:id="@+id/txtType"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Add Note"
