--- a/app/src/main/res/layout/activity_add_note_page.xml
+++ b/app/src/main/res/layout/activity_add_note_page.xml
@@ -37,7 +37,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:src="@drawable/user" />
+                android:src="@drawable/home" />
 
         </LinearLayout>
 
@@ -123,6 +123,8 @@
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/picList"
+                            android:layout_marginStart="-15dp"
+                            android:layout_marginEnd="-15dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
 
